--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://iamwilliamcao.github.io/wackie-talkie",
+  "homepage": "https://iamwilliamcao.github.io/Chaverse---Chat-Beyond-Language",
   "name": "patchpoint",
   "version": "0.1.0",
   "private": true,
